--- a/LOGgrupo2/pom.xml
+++ b/LOGgrupo2/pom.xml
@@ -29,6 +29,13 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>9.0.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/s3 -->
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.31.16</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <build>
