--- a/LOGgrupo2/pom.xml
+++ b/LOGgrupo2/pom.xml
@@ -36,7 +36,16 @@
             <version>2.31.16</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.3.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
