correcao do script e adicao na nova tabela

--- a/Banco de Dados/Dockerfile
+++ b/Banco de Dados/Dockerfile
@@ -2,7 +2,7 @@ FROM mysql:latest
 
 ENV MYSQL_ROOT_PASSWORD=urubu100 
 
-COPY ./SCRIPTbd/ /docker-entrypoint-initdb.d/ 
+COPY ./SCRIPTbd.sql/ /docker-entrypoint-initdb.d/ 
 
 EXPOSE 3306 
 
