--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -16,7 +16,10 @@ jobs:
 
             - name: Realiza o build da imagem do Java
               run: docker build --build-arg AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} --build-arg AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }} -t furqas/respira-java-data -f ./LOGgrupo2/Dockerfile ./LOGgrupo2
-
-            - name: Push image docker
-              run: sudo docker push furqas/respira-java-data
+            
+            - name: Realiza o build da imagem do site
+              run: docker build -t furqas/respira-web -f ./site/Dockerfile ./site
+    
+            - name: Envia a imagem para o dockerhub
+              run: sudo docker push furqas/respira-java-data && sudo docker push furqas/respira-web
 
