Altera o workflow para push ao inves de pr

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,7 +1,7 @@
 name: Builda as imagens do projeto e faz o push para o docker hub
 
 on:
-    pull_request:
+    push:
         branches: ["dev"]
 
 jobs:
