--- a/site/.env.dev
+++ b/site/.env.dev
@@ -1,3 +1,8 @@
 APP_PORT=3000
 APP_HOST=localhost
 AMBIENTE_PROCESSO=desenvolvimento
+DB_HOST=localhost
+DB_DATABASE=Respira
+DB_USER=root
+DB_PASSWORD=urubu100
+DB_PORT=3306
