--- a/site/package.json
+++ b/site/package.json
@@ -7,8 +7,10 @@
     "start": "node app.js",
     "dev": "nodemon --exec node app.js"
   },
+  
   "author": "Feito pelos desenvolvedores @ São Paulo Tech School / Bandtec Digital School",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
