--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,9 @@ services:
     restart: always
     hostname: localhost
     environment:
-      - APP_PORT="3000"
-      - APP_HOST=localhost
-      - AMBIENTE_PROCESSO=desenvolvimento
+      - APP_PORT=3000
+      - APP_HOST=${APP_HOST}
+      - AMBIENTE_PROCESSO=producao
       - DB_HOST=${DB_HOST}
       - DB_DATABASE=Respira
       - DB_USER=${DB_USER}
@@ -37,6 +37,7 @@ services:
         - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
         - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
         - AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
+        - SLACK_HOOK=${SLACK_HOOK}
     ports:
       - "8080:8080"
     networks:
