adiciona as notificacoes sendo enviadas ao banco com parametrizacao de que chat enviar as mesmas

--- a/.env
+++ b/.env
@@ -9,4 +9,5 @@ DB_DATABASE=credenciais
 DB_USER=credenciais
 DB_PASSWORD=credenciais
 DB_PORT=credenciais
-SLACK_HOOK=credentials
+SLACK_HOOK_SAUDE=credentials
+SLACK_HOOK_AMBIENTAL=credentials
