remove o host local da config do java e adiciona melhorias de segurança

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: respira-bd
     restart: always
     hostname: localhost
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
     ports:
@@ -34,15 +36,15 @@ services:
     restart: always
     hostname: localhost
     depends_on:
-      mysql:
-        condition: service_healthy
-        restart: true
+      - mysql
     environment:
         - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
         - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
         - AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
         - SLACK_HOOK_SAUDE=${SLACK_HOOK_SAUDE}
         - SLACK_HOOK_AMBIENTAL=${SLACK_HOOK_AMBIENTAL}
+        - DB_USER=${DB_USER}
+        - DB_PASSWORD=${DB_PASSWORD}
     ports:
       - "8080:8080"
     networks:
