corrige o nome errado do hebhook

--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-AWS_ACCESS_KEY_ID=credenciais
-AWS_SECRET_ACCESS_KEY=credenciais
-AWS_SESSION_TOKEN=credenciais
-APP_PORT=credenciais
-APP_HOST=credenciais
-AMBIENTE_PROCESSO=credenciais
-DB_HOST=credenciais
-DB_DATABASE=credenciais
-DB_USER=credenciais
-DB_PASSWORD=credenciais
-DB_PORT=credenciais
+AWS_ACCESS_KEY_ID=credentials
+AWS_SECRET_ACCESS_KEY=credentials
+AWS_SESSION_TOKEN=credentials
+APP_PORT=credentials
+APP_HOST=credentials
+AMBIENTE_PROCESSO=credentials
+DB_HOST=credentials
+DB_DATABASE=credentials
+DB_USER=credentials
+DB_PASSWORD=credentials
+DB_PORT=credentials
 SLACK_HOOK_SAUDE=credentials
 SLACK_HOOK_AMBIENTAL=credentials
