--- a/site/.env.dev
+++ b/site/.env.dev
@@ -2,7 +2,8 @@ APP_PORT=3000
 APP_HOST=localhost
 AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
-DB_DATABASE=Respira
+DB_DATABASE=RespiraSP
 DB_USER=root
 DB_PASSWORD=kitkatGostoso
+DB_PASSWORD=Garoto04-
 DB_PORT=3306
