--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,9 @@
 services:
   mysql:
     image: furqas/respira-bd:latest
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      interval: 5s
-      retries: 5
-      timeout: 5s
     container_name: respira-bd
     restart: always
     hostname: localhost
-    environment:
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
     volumes:
       - mysql_data:/var/lib/mysql
     ports:
@@ -40,17 +33,11 @@ services:
     container_name: respira-java
     restart: always
     hostname: localhost
-    depends_on:
-      mysql:
-        condition: service_healthy
     environment:
         - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
         - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
         - AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
-        - SLACK_HOOK_SAUDE=${SLACK_HOOK_SAUDE}
-        - SLACK_HOOK_AMBIENTAL=${SLACK_HOOK_AMBIENTAL}
-        - DB_USER=${DB_USER}
-        - DB_PASSWORD=${DB_PASSWORD}
+        - SLACK_HOOK=${SLACK_HOOK}
     ports:
       - "8080:8080"
     networks:
