--- a/site/.env.dev
+++ b/site/.env.dev
@@ -4,5 +4,5 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE=RespiraSP
 DB_USER=root
-DB_PASSWORD=Garoto04-
+DB_PASSWORD=
 DB_PORT=3306
