--- a/site/.env.dev
+++ b/site/.env.dev
@@ -2,7 +2,7 @@ APP_PORT=3000
 APP_HOST=localhost
 AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
-DB_DATABASE=RespiraSP
+DB_DATABASE=Respira
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD='@BD2419#lol09'
 DB_PORT=3306
