--- a/site/.env.dev
+++ b/site/.env.dev
@@ -4,5 +4,5 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE=Respira
 DB_USER=root
-DB_PASSWORD=urubu100
+DB_PASSWORD='@e4e5cf6cc6bb4#'
 DB_PORT=3306
