crud da empresa completa

--- a/site/.env.dev
+++ b/site/.env.dev
@@ -4,10 +4,5 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE=Respira
 DB_USER=root
-<<<<<<< HEAD
-DB_PASSWORD='urubu100'
+DB_PASSWORD='@BD2419#lol09'
 DB_PORT=3306
-=======
-DB_PASSWORD=urubu100
-DB_PORT=3306
->>>>>>> 22ea4ffd30a98a19c014d96dad8408c745d71423
